<resources>
    <string name="app_name">Xtronic</string>

    <string name="Dok">Yes</string>
    <string name="DCancel">No</string>
    <string name="DMsg">"You want to Log Out from this device"</string>

    <!--    HomeScreen-->
    <string name="button1">Create Quiz</string>
    <string name="button2">Join Quiz</string>
    <string name="button3">Results</string>

    <!--    QuizInfoBAsic-->
    <string name="button4">Next</string>
    <string name="Ename">Enter Your Name</string>
    <string name="Tname">Topic Name</string>
    <string name="Dur">Duration (In Minutes )</string>
    <string name="hint_duration">Leave If No Time-limit</string>

    <!--    QuizSetIdentifier-->
    <string name="button5">Proceed</string>
    <string name="SIdentifier">Set Identifier</string>
    <string name="SIdentifierHelp">
        Identifier is a Value that will be asked from Students\n
        It will help you identify them.\n
          Eg: \n
        Enter <b>\"Roll Number\"</b> below ,\n If you want to ask
            Roll Number from the person who is going to
            give the Quiz
    </string>

    <!--    SetQuiz-->
    <string name="button6">Submit</string>
    <string name="QTime">Question Time</string>
    <string name="AddMoreOptions">Add More Options</string>
    <string name="AddMoreQuestions">Add Question</string>

    <!--    Quiz Sharing-->
    <string name="QuizCreated">Quiz Created</string>
    <string name="QuizCode">#CODEK</string>
    <string name="Share_WAPP">Share To Whatsapp</string>
    <string name="Share_FB">Share To Facebook</string>
    <string name="Share_MSG">Share To Messenger</string>
    <string name="Share_Other">Other Apps</string>
    <string name="CpyCode">Copy Quiz Code</string>

    <!--    JoinQuiz-->
    <string name="join">Join</string>
    <string name="quiz">Quiz</string>
    <string name="hash">#</string>

    <!--    GetIdentifier-->
    <string name="specify">Specify!</string>
    <string name="EIdentifier">Enter Identifier</string>
    <string name="button7">Start</string>

    <!--    QuizTime-->
    <string name="time">00:00</string>
    <string name="QBoxhere">Question Here</string>
    <string name="Opt1">Option 1 goes here</string>
    <string name="Opt2">Option 2 goes here</string>
    <string name="Opt3">Option 3 goes here</string>
    <string name="Opt4">Option 4 goes here</string>
    <string name="button8">Next</string>

    <!--    QuizSubmission-->
    <string name="quizSubmitted">Quiz Successfully</string>
    <string name="Submitted">Submitted</string>
    <string name="score">Score</string>
    <string name="button9">View Some Ads</string>


    <!--    QuizStats-->
    <string name="loading">Loading…</string>

    <!--    AnswerSheet-->
    <string name="CorrectQStatusText">Correct Answer</string>
    <string name="WrongQStatusText">Correct Answer</string>

<!--    About Developer-->
    <string name="AboutMe">
        <i>
        \" Hey Everyone ,\n\n
        My Name\'s  <b><u>Prince</u></b> ,
        The Creator of this Simple App.
        There are lots of app available in the market but most of them were frustrating and Complex . So I designed this Quiz App ,
        Where everything is Simple and Ads are managed and Shown to you only when you want to see them .\nI request you to See Some Ads to Contribute to Developer(Cute wala emoji).
        \n\n
        Dhanyawad(Thanks) \"
        </i>
    </string>

</resources>