<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_quizsharing"
    tools:context=".QuizSharing">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/simple_white_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/trophy_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poplarstd"
        android:text="@string/QuizCreated"
        android:textColor="#AF1B1B"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/ShareID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poplarstd"
        android:text="@string/QuizCode"
        android:textColor="#1BAFA5"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/ShareToWhatsApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/simple_lightgreen_side_button"
        android:drawableStart="@drawable/ic_whatsapp"
        android:drawablePadding="20dp"
        android:fontFamily="@font/yanone"
        android:padding="10dp"
        android:text="@string/Share_WAPP"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/ShareToFaceBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/simple_lightblue_side_button"
        android:drawableStart="@drawable/ic_facebook"
        android:drawablePadding="20dp"
        android:fontFamily="@font/yanone"
        android:padding="10dp"
        android:text="@string/Share_FB"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShareToWhatsApp" />

    <Button
        android:id="@+id/ShareToMessenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/simple_blue_side_button"
        android:drawableEnd="@drawable/ic_messenger"
        android:drawablePadding="25dp"
        android:fontFamily="@font/yanone"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/Share_MSG"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShareToFaceBook" />

    <Button
        android:id="@+id/ShareToOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/simple_white_side_button"
        android:drawableEnd="@drawable/ic_android"
        android:drawablePadding="25dp"
        android:fontFamily="@font/yanone"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/Share_Other"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShareToMessenger" />

    <Button
        android:id="@+id/CopyShareID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_lightyellow_button"
        android:fontFamily="@font/yanone"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/CpyCode"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShareToOther" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>