<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_quiztime"
    tools:context=".QuizTime">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:background="@drawable/side_timeview_white_button"
                android:fontFamily="@font/dosis_regular"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:paddingEnd="30dp"
                android:paddingBottom="5dp"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/QBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/simple_white_button"
                android:elevation="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Timer"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/QuestionHere"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/biryani_regular"
                    android:padding="10dp"
                    android:text="@string/QBoxhere"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/Option1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/opt1_quiztime"
                    android:fontFamily="@font/dosis_regular"
                    android:text="@string/Opt1"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/QuestionHere" />

                <Button
                    android:id="@+id/Option2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/opt2_quiztime"
                    android:fontFamily="@font/dosis_regular"
                    android:text="@string/Opt2"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Option1" />

                <Button
                    android:id="@+id/Option3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/opt3_quiztime"
                    android:fontFamily="@font/dosis_regular"
                    android:text="@string/Opt3"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Option2" />

                <Button
                    android:id="@+id/Option4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/opt4_quiztime"
                    android:fontFamily="@font/dosis_regular"
                    android:text="@string/Opt4"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Option3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/NextQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/simple_darkpink_button"
                android:elevation="10dp"
                android:fontFamily="@font/yanone"
                android:text="@string/button8"
                android:visibility="gone"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/QBox" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/progressViewQuizTime"
        layout="@layout/custom_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>