<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_quizsubmission"
    tools:context=".QuizSubmission">

    <ImageView
        android:id="@+id/greenTick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_greentick" />

    <TextView
        android:id="@+id/QSTxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poplarstd"
        android:text="@string/quizSubmitted"
        android:textColor="#0583BB"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenTick" />

    <TextView
        android:id="@+id/QSTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poplarstd"
        android:text="@string/Submitted"
        android:textColor="#0583BB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QSTxt1" />

    <TextView
        android:id="@+id/ScoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poplarstd"
        android:text="@string/score"
        android:textColor="#FFFFFF"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="@+id/ScoreLayout"
        app:layout_constraintStart_toStartOf="@+id/ScoreLayout"
        app:layout_constraintTop_toBottomOf="@+id/QSTxt2" />

    <RelativeLayout
        android:id="@+id/ScoreLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScoreTxt">

        <ImageView
            android:id="@+id/ScoreCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            app:srcCompat="@drawable/ic_empty_circle" />

        <TextView
            android:id="@+id/RealScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="41dp"
            android:fontFamily="@font/yanone"
            android:maxLength="6"
            android:maxLines="1"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="60sp" />
    </RelativeLayout>



    <Button
        android:id="@+id/ViewSomeAdsQuizSubmission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/simple_white_button"
        android:fontFamily="@font/yanone"
        android:padding="5dp"
        android:text="@string/button9"
        android:textColor="#0583BB"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScoreLayout"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>