<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_quizinfobasic"
    tools:context=".QuizInfoBasic">



            <ImageView
                android:id="@+id/XLogo_QIB"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/x_logo" />


            <LinearLayout
                android:id="@+id/BasicInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/EnameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/yanone"
                    android:text="@string/Ename"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/CreatorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/simple_white_button"
                    android:elevation="10dp"
                    android:ems="10"
                    android:fontFamily="@font/yanone"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TnameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/yanone"
                    android:text="@string/Tname"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/TopicName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/simple_white_button"
                    android:elevation="10dp"
                    android:ems="10"
                    android:fontFamily="@font/yanone"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/DurText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/yanone"
                    android:text="@string/Dur"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/Duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/simple_white_button"
                    android:elevation="10dp"
                    android:fontFamily="@font/yanone"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="15dp"
                    android:hint="@string/hint_duration"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/timerType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/yanone"
                    android:checked="false"
                    android:layout_marginTop="5dp"
                    android:text="Make it Question Based Timer"
                    android:buttonTint="@android:color/white"
                    android:textSize="20sp"/>


                <Button
                    android:id="@+id/NextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/simple_green_button"
                    android:elevation="10dp"
                    android:fontFamily="@font/yanone"
                    android:layout_marginTop="20dp"
                    android:text="@string/button4"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp" />

            </LinearLayout>


    <include
        android:id="@+id/progressViewInfoBasic"
        layout="@layout/custom_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>