<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_getidentifier"
    tools:context=".GetIdentifier">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/headingGetIdentifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/headingGetIdentifierTopMargin"
        android:fontFamily="@font/poplarstd"
        android:text="@string/specify"
        android:textAlignment="center"
        android:textColor="#116BD2"
        android:textSize="75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EIdentifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/simple_lightgreen_3round_button"
        android:fontFamily="@font/yanone"
        android:padding="@dimen/IdentifierButtonAndBoxPadding"
        android:text="@string/EIdentifier"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingGetIdentifier" />

    <EditText
        android:id="@+id/IdentifierBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/simple_white_3round_button"
        android:ems="10"
        android:fontFamily="@font/yanone"
        android:inputType="textPersonName"
        android:padding="@dimen/IdentifierButtonAndBoxPadding"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EIdentifier" />

    <Button
        android:id="@+id/startQuizButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/simple_red_button"
        android:fontFamily="@font/yanone"
        android:padding="10dp"
        android:text="@string/button7"
        android:textColor="#FFFFFF"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdentifierBox" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/progressViewGetIdentifier"
        layout="@layout/custom_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>